--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <section class="card contact-section">
             <header class="contact-header">
                 <div class="contact-image-container">
-                    <img src="images/doha.jpg" alt="Doha Al-Twisat Signature" class="contact-header-image">
+                    <img src="https://doha164074.github.io/images/doha.jpg" alt="Doha Al-Twisat Signature" class="contact-header-image">
                 </div>
                 <h2>Get In Touch</h2>
                 <p>I'm eager to hear from you! Please use the form below for any inquiries or to simply say hi.</p>
@@ -94,4 +94,5 @@
     </script>
 
 </body>
+
 </html>
