--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <header class="hero-section card">
             <div class="profile-photo-container">
-                <img src="images/myphoto.jpg" alt="Professional photo of Doha Al-Twisat" class="profile-photo">
+                <img src="https://doha164074.github.io/images/myphoto.jpg" alt="Professional photo of Doha Al-Twisat" class="profile-photo">
             </div>
             <div class="header-content">
                 <h1>Doha Al-Twisat</h1>
@@ -97,7 +97,7 @@
                     <a href="https://www.linkedin.com/in/doha-nasr-b36a73333?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="contact-link">LinkedIn profile</a>.
                 </p>
                 <div class="university-logo-container">
-                    <img src="images/university-logo.png" alt="Jordan University of Science and Technology Logo" class="small-logo">
+                    <img src="https://doha164074.github.io/images/university-logo.png" alt="Jordan University of Science and Technology Logo" class="small-logo">
                 </div>
             </div>
         </section>
@@ -109,4 +109,5 @@
     </footer>
 
 </body>
+
 </html>
